// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Client Header when editing 1`] = `
<form>
  <h1
    className="MuiTypography-root-81 MuiTypography-display3-83 MuiTypography-gutterBottom-98"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-120 MuiButton-root-105 MuiButton-raised-110 MuiButton-raisedPrimary-112 ClientEditor-button-80"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-106"
        >
          Update
        </span>
        <span
          className="MuiTouchRipple-root-122"
        />
      </button>
      <button
        className="MuiButtonBase-root-120 MuiButton-root-105 MuiButton-raised-110 ClientEditor-button-80"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-106"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-122"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-130 MuiFormControl-marginNormal-131 EditableTextField-textField-129"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-140 MuiInputLabel-root-134 MuiInputLabel-formControl-135 MuiInputLabel-animated-138 MuiInputLabel-shrink-137"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-144 MuiInput-formControl-145 MuiInput-inkbar-146 MuiInput-underline-150"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-153"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Client Header when updating 1`] = `
<form>
  <h1
    className="MuiTypography-root-160 MuiTypography-display3-162 MuiTypography-gutterBottom-177"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-199 MuiButtonBase-disabled-200 MuiButton-root-184 MuiButton-raised-189 MuiButton-raisedPrimary-191 MuiButton-disabled-193 ClientEditor-button-159"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-185"
        >
          Update
        </span>
      </button>
      <button
        className="MuiButtonBase-root-199 MuiButtonBase-disabled-200 MuiButton-root-184 MuiButton-raised-189 MuiButton-disabled-193 ClientEditor-button-159"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-185"
        >
          Cancel
        </span>
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-202 MuiFormControl-marginNormal-203 EditableTextField-textField-201"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-212 MuiInputLabel-root-206 MuiInputLabel-formControl-207 MuiInputLabel-animated-210 MuiInputLabel-shrink-209"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-216 MuiInput-disabled-221 MuiInput-formControl-217 MuiInput-inkbar-218 MuiInput-underline-222"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-225 MuiInput-inputDisabled-227"
        defaultValue={undefined}
        disabled={true}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Client Header with a client 1`] = `
<form>
  <h1
    className="MuiTypography-root-2 MuiTypography-display3-4 MuiTypography-gutterBottom-19"
  >
    Some Client
  </h1>
  <div>
    <span>
      <button
        className="MuiButtonBase-root-41 MuiButton-root-26 MuiButton-raised-31 ClientEditor-button-1"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-27"
        >
          Edit
        </span>
        <span
          className="MuiTouchRipple-root-43"
        />
      </button>
      <button
        className="MuiButtonBase-root-41 MuiButton-root-26 MuiButton-raised-31 MuiButton-raisedSecondary-34 ClientEditor-button-1"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-27"
        >
          Remove
        </span>
        <span
          className="MuiTouchRipple-root-43"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-51 MuiFormControl-marginNormal-52 EditableTextField-textField-50"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-61 MuiInputLabel-root-55 MuiInputLabel-formControl-56 MuiInputLabel-animated-59 MuiInputLabel-shrink-58"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-65 MuiInput-formControl-66 MuiInput-inkbar-67 MuiInput-underline-71"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-74"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Client"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Clients List with adding a new client 1`] = `
<table
  className="MuiTable-root-365 ClientsList-root-361"
>
  <thead>
    <tr
      className="MuiTableRow-root-366 MuiTableRow-typeHead-367"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-371 MuiTableCell-paddingDefault-376 MuiTableCell-typeHead-373"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-366"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-371 MuiTableCell-paddingDefault-376 MuiTableCell-typeBody-374"
        scope={undefined}
      >
        <div
          className="MuiInput-root-379 MuiInput-disabled-384 MuiInput-inkbar-381 MuiInput-underline-385"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-388 MuiInput-inputDisabled-390"
            defaultValue={undefined}
            disabled={true}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value="Some New Client"
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-371 MuiTableCell-paddingDefault-376 MuiTableCell-typeBody-374 ClientsList-actionCell-363"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-362"
        >
          <button
            className="MuiButtonBase-root-409 MuiButtonBase-disabled-410 MuiButton-root-394 MuiButton-flatPrimary-396 MuiButton-disabled-403"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="MuiButton-label-395"
            >
              Add
            </span>
          </button>
          <div
            className="MuiCircularProgress-root-411 MuiCircularProgress-colorPrimary-412 ClientsList-buttonProgress-364"
            role="progressbar"
            style={
              Object {
                "height": 25,
                "width": 25,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg-414 MuiCircularProgress-svgIndeterminate-415"
              viewBox="0 0 50 50"
            >
              <circle
                className="MuiCircularProgress-circle-416 MuiCircularProgress-circleIndeterminate-417"
                cx={25}
                cy={25}
                fill="none"
                r={20}
                strokeWidth={3.6}
                style={Object {}}
              />
            </svg>
          </div>
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-366"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-371 MuiTableCell-paddingDefault-376 MuiTableCell-typeBody-374"
        scope={undefined}
      >
        <a>
          Some Client
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Clients List with loading all clients 1`] = `
<table
  className="MuiTable-root-292 ClientsList-root-288"
>
  <thead>
    <tr
      className="MuiTableRow-root-293 MuiTableRow-typeHead-294"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-298 MuiTableCell-paddingDefault-303 MuiTableCell-typeHead-300"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-293"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-298 MuiTableCell-paddingDefault-303 MuiTableCell-typeBody-301"
        scope={undefined}
      >
        <div
          className="MuiInput-root-306 MuiInput-inkbar-308 MuiInput-underline-312"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-315"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-298 MuiTableCell-paddingDefault-303 MuiTableCell-typeBody-301 ClientsList-actionCell-290"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-289"
        >
          <button
            className="MuiButtonBase-root-336 MuiButton-root-321 MuiButton-flatPrimary-323"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-322"
            >
              Add
            </span>
            <span
              className="MuiTouchRipple-root-338"
            />
          </button>
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-293"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-298 MuiTableCell-paddingDefault-303 MuiTableCell-typeBody-301"
        colSpan={2}
        scope={undefined}
      >
        <div
          className="MuiLinearProgress-root-345 MuiLinearProgress-primaryColor-346"
          mode="query"
          role="progressbar"
        >
          <div
            className="MuiLinearProgress-bar-352 MuiLinearProgress-primaryColorBar-347 MuiLinearProgress-indeterminateBar1-357"
            style={Object {}}
          />
          <div
            className="MuiLinearProgress-bar-352 MuiLinearProgress-primaryColorBar-347 MuiLinearProgress-indeterminateBar2-358"
            style={Object {}}
          />
        </div>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root-293"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-298 MuiTableCell-paddingDefault-303 MuiTableCell-typeBody-301"
        scope={undefined}
      >
        <a>
          Some Client
        </a>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Clients List with no clients 1`] = `
<table
  className="MuiTable-root-235 ClientsList-root-231"
>
  <thead>
    <tr
      className="MuiTableRow-root-236 MuiTableRow-typeHead-237"
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root-241 MuiTableCell-paddingDefault-246 MuiTableCell-typeHead-243"
        scope="col"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="MuiTableRow-root-236"
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root-241 MuiTableCell-paddingDefault-246 MuiTableCell-typeBody-244"
        scope={undefined}
      >
        <div
          className="MuiInput-root-249 MuiInput-inkbar-251 MuiInput-underline-255"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-258"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder="New Client Name"
            readOnly={undefined}
            required={undefined}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root-241 MuiTableCell-paddingDefault-246 MuiTableCell-typeBody-244 ClientsList-actionCell-233"
        scope={undefined}
      >
        <div
          className="ClientsList-wrapper-232"
        >
          <button
            className="MuiButtonBase-root-279 MuiButton-root-264 MuiButton-flatPrimary-266"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label-265"
            >
              Add
            </span>
            <span
              className="MuiTouchRipple-root-281"
            />
          </button>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Product Editor when editing 1`] = `
<form>
  <h1
    className="MuiTypography-root-498 MuiTypography-display3-500 MuiTypography-gutterBottom-515"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-537 MuiButton-root-522 MuiButton-raised-527 MuiButton-raisedPrimary-529 ProductEditor-button-497"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-523"
        >
          Update
        </span>
        <span
          className="MuiTouchRipple-root-539"
        />
      </button>
      <button
        className="MuiButtonBase-root-537 MuiButton-root-522 MuiButton-raised-527 ProductEditor-button-497"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-523"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-539"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-547 MuiFormControl-marginNormal-548 EditableTextField-textField-546"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-557 MuiInputLabel-root-551 MuiInputLabel-formControl-552 MuiInputLabel-animated-555 MuiInputLabel-shrink-554"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-561 MuiInput-formControl-562 MuiInput-inkbar-563 MuiInput-underline-567"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-570"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Product Editor when updating 1`] = `
<form>
  <h1
    className="MuiTypography-root-577 MuiTypography-display3-579 MuiTypography-gutterBottom-594"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-616 MuiButtonBase-disabled-617 MuiButton-root-601 MuiButton-raised-606 MuiButton-raisedPrimary-608 MuiButton-disabled-610 ProductEditor-button-576"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-602"
        >
          Update
        </span>
      </button>
      <button
        className="MuiButtonBase-root-616 MuiButtonBase-disabled-617 MuiButton-root-601 MuiButton-raised-606 MuiButton-disabled-610 ProductEditor-button-576"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className="MuiButton-label-602"
        >
          Cancel
        </span>
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-619 MuiFormControl-marginNormal-620 EditableTextField-textField-618"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-629 MuiInputLabel-root-623 MuiInputLabel-formControl-624 MuiInputLabel-animated-627 MuiInputLabel-shrink-626"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-633 MuiInput-disabled-638 MuiInput-formControl-634 MuiInput-inkbar-635 MuiInput-underline-639"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-642 MuiInput-inputDisabled-644"
        defaultValue={undefined}
        disabled={true}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={false}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;

exports[`Storyshots Product Editor with a product 1`] = `
<form>
  <h1
    className="MuiTypography-root-419 MuiTypography-display3-421 MuiTypography-gutterBottom-436"
  >
    Some Product
  </h1>
  Client: 
  Some Client
  <div>
    <span>
      <button
        className="MuiButtonBase-root-458 MuiButton-root-443 MuiButton-raised-448 ProductEditor-button-418"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-444"
        >
          Edit
        </span>
        <span
          className="MuiTouchRipple-root-460"
        />
      </button>
      <button
        className="MuiButtonBase-root-458 MuiButton-root-443 MuiButton-raised-448 MuiButton-raisedSecondary-451 ProductEditor-button-418"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label-444"
        >
          Remove
        </span>
        <span
          className="MuiTouchRipple-root-460"
        />
      </button>
    </span>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-468 MuiFormControl-marginNormal-469 EditableTextField-textField-467"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-478 MuiInputLabel-root-472 MuiInputLabel-formControl-473 MuiInputLabel-animated-476 MuiInputLabel-shrink-475"
      data-shrink={true}
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="MuiInput-root-482 MuiInput-formControl-483 MuiInput-inkbar-484 MuiInput-underline-488"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={undefined}
        className="MuiInput-input-491"
        defaultValue={undefined}
        disabled={false}
        id="name"
        name={undefined}
        onChange={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={true}
        required={undefined}
        rows={undefined}
        type="text"
        value="Some Product"
      />
    </div>
  </div>
</form>
`;
